@@ -1,0 +1,72 @@
+<?xml version="1.0"?>
+<!-- generated by wxGlade 0.3.2 on Sun May 29 17:13:24 2005 -->
+
+<application path="" name="" class="" option="0" language="python" top_window="" encoding="ISO-8859-1" use_gettext="0" overwrite="0" use_new_namespace="1">
+    <object class="wxDialog" name="AboutDialog" base="EditDialog">
+        <style>wxDIALOG_MODAL|wxCAPTION|wxSYSTEM_MENU</style>
+        <title>About Catapult</title>
+        <centered>1</centered>
+        <object class="wxBoxSizer" name="AboutMainSizer" base="EditBoxSizer">
+            <orient>wxVERTICAL</orient>
+            <object class="sizeritem">
+                <flag>wxALL|wxALIGN_CENTER_HORIZONTAL</flag>
+                <border>5</border>
+                <option>0</option>
+                <object class="wxStaticBitmap" name="AboutBitmap" base="EditStaticBitmap">
+                    <attribute>1</attribute>
+                    <bitmap>../resources/bitmaps/about.png</bitmap>
+                </object>
+            </object>
+            <object class="sizeritem">
+                <flag>wxALL|wxALIGN_CENTER_HORIZONTAL</flag>
+                <border>5</border>
+                <option>0</option>
+                <object class="wxBoxSizer" name="AboutProductSizer" base="EditBoxSizer">
+                    <orient>wxHORIZONTAL</orient>
+                    <object class="sizeritem">
+                        <flag>wxALL|wxALIGN_CENTER_HORIZONTAL | wxADJUST_MINSIZE</flag>
+                        <border>0</border>
+                        <option>0</option>
+                        <object class="wxStaticText" name="AboutProductLabel" base="EditStaticText">
+                            <attribute>1</attribute>
+                            <label></label>
+                        </object>
+                    </object>
+                </object>
+            </object>
+            <object class="sizeritem">
+                <flag>wxALL|wxALIGN_CENTER_HORIZONTAL</flag>
+                <border>5</border>
+                <option>0</option>
+                <object class="wxBoxSizer" name="AboutMessageSizer" base="EditBoxSizer">
+                    <orient>wxHORIZONTAL</orient>
+                    <object class="sizeritem">
+                        <flag>wxALL|wxALIGN_CENTER_HORIZONTAL | wxADJUST_MINSIZE</flag>
+			<border>0</border>
+                        <option>0</option>
+                        <object class="wxStaticText" name="AboutMessageLabel" base="EditStaticText">
+                            <attribute>1</attribute>
+                            <label></label>
+                        </object>
+                    </object>
+                </object>
+            </object>
+            <object class="sizeritem">
+                <flag>wxALL|wxALIGN_CENTER_HORIZONTAL|wxALIGN_CENTER_VERTICAL</flag>
+                <border>5</border>
+                <option>0</option>
+                <object class="wxBoxSizer" name="AboutButtonSizer" base="EditBoxSizer">
+                    <orient>wxHORIZONTAL</orient>
+                    <object class="sizeritem">
+                        <flag>wxLEFT|wxRIGHT</flag>
+                        <border>3</border>
+                        <option>0</option>
+                        <object class="wxButton" name="AboutOkButton" base="EditButton">
+                            <label>OK</label>
+                        </object>
+                    </object>
+                </object>
+            </object>
+        </object>
+    </object>
+</application>
